--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -10,12 +10,11 @@
   <script src="lib/jasmine-2.3.4/jasmine.js"></script>
   <script src="lib/jasmine-2.3.4/jasmine-html.js"></script>
   <script src="lib/jasmine-2.3.4/boot.js"></script>
-  <script src="lib/jasmine-2.3.4/jasmine-jquery.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
-  <script src="https://raw.githubusercontent.com/velesin/jasmine-jquery/master/lib/jasmine-jquery.js"></script>
+  <script src="lib/jasmine-2.3.4/jasmine-jquery.js"></script>
 
   <!-- include source files here... -->
-  <script src="src/Thermostat.js"></script>
+  <script src="app/src/Thermostat.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/ThermostatSpec.js"></script>
