--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   </head>
   <body>
     <div class="container">
+      <button onclick="getLocation()">Try It</button>
+      <p id='demo'></p>
       <div id='weather'></div>
       <form input='text' method='get'>
         <input type='text' name='city'>
@@ -33,5 +35,6 @@
   </body>
     <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
     <script src="app/src/Thermostat.js"></script>
+    <script src="app/src/location.js"></script>
     <script src="app/public/javascript/app.js"></script>
 </html>
